assets/css/main.css
/* ... */
.button img {
  margin-left: 4px;
}

a.button  {
  color: var(--contrast-color);
}

.button-primary {
  background: var(--accent-color);
}

.button-secondary {
  background: var(--surface-color);
}


.about-me-pic {
  width: 50%;
  z-index: 2;
  opacity: 95%;
  align-self: flex-end;
  filter: saturate(0.8);
}

.profile-picture {
  border: 5px solid var(--background-color);
  width: 150px;
  height: 150px;
  border-radius: 50%;
  overflow: hidden;
}

.hero:before {
  content: "";
  background: color-mix(in srgb, var(--background-color), transparent 70%);
  position: absolute;
  inset: 0;
  z-index: -2;
}

.hero .container {
  position: relative;
  padding: 55px;
  display: flex;
  flex-direction: column;
  align-items: left;
  text-align: left;
  width: 50%;
}

.hero-text img {
  max-width: 30vw;
}

.hero h1 {
  color: var(--accent-color);
  font-family: ;
  font-size: 96px;
  line-height: 96px;
  font-weight: 800;
  text-align: left;
}

.hero p {
  margin-top: 24px; 
  background-color: var(--background-color);
  color: var(--default-color);
}

.hero .social-links {
  margin-top: 25px;
}

.hero .social-links a {
  font-size: 24px;
  display: inline-block;
  color: color-mix(in srgb, var(--default-color), transparent 50%);
  line-height: 1;
  margin-right: 20px;
  transition: 0.3s;
}

.hero .social-links a:hover {
  color: var(--accent-color);
}

.hero-thin {
  color: var(--default-color);
  font-weight: 100;
}

@media (max-width: 768px) {

  .hero {
    min-height: unset;
    flex-direction: column-reverse;
    justify-content: space-evenly;
  }

  .hero .container {
    width: 100%;
  }

  .about-me-pic {
    align-self: flex-start;
  }

}

/*--------------------------------------------------------------
# About Section
--------------------------------------------------------------*/

.about .content ul {
  list-style: none;
  padding: 0;
}

.about .content ul li {
  margin-bottom: 20px;
  display: flex;
  align-items: center;
}

.about .content ul strong {
  margin-right: 10px;
}

.about .content ul i {
  font-size: 16px;
  margin-right: 5px;
  color: var(--accent-color);
  line-height: 0;
}

.about-me-section {
  display: flex;
  gap: 96px;
}

.about-me-section .metrics {
  width: 50%;
}

.about-me-section .content {
  width: 50%;
}

@media (max-width: 768px) {
  .about-me-section {
    flex-direction: column;
  }

  .about-me-section .metrics {
    width: 100%;
        max-width: 375px;
        margin: 0 auto;
  }
  
  .about-me-section .content {
    width: 100%;
  }

}


/*--------------------------------------------------------------
# Stats Section
--------------------------------------------------------------*/

.metrics {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 32px;
  align-items: center;
}

.metric-item {
  width: 100%;
  padding: 24px;
  background: var(--background-color);
  border-radius: 16px;
  display: flex;
  align-items: center;
  gap: 24px;
}

.metric-icon {
  padding: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--surface-color);
  border-radius: 50%;
}

.section-title span {
  color: var(--accent-color);
}

/*--------------------------------------------------------------
# Skills Section
--------------------------------------------------------------*/
.skills .progress {
  height: 60px;
  display: block;
  background: none;
  border-radius: 0;
}

.skills .progress .skill {
  color: var(--heading-color);
  padding: 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: var(--default-font);
}

.skills .progress .skill .val {
  float: right;
  font-style: normal;
}

.skills .progress-bar-wrap {
  background: color-mix(in srgb, var(--accent-color), transparent 75%) !important;
  height: 10px;
}

.skills .progress-bar {
  width: 1px;
  height: 10px;
  transition: 0.9s;
  background-color: var(--accent-color) !important;
}

/*--------------------------------------------------------------
# Resume Section
--------------------------------------------------------------*/
/* section#resume, section#skills, section#resume *, section#skills * {
  background-color: white;
  color: black !important;
  filter: grayscale(1);
} */

.resume-title {
  color: var(--heading-color);
  font-size: 26px;
  font-weight: 700;
  margin-top: 20px;
  margin-bottom: 20px;
}

.resume .resume-item {
  padding: 0 0 20px 20px;
  margin-top: 25px;
  border-left: 2px solid var(--accent-color);
  position: relative;
}

.resume .resume-item h4 {
  line-height: 18px;
  font-size: 18px;
  font-weight: 600;
  color: color-mix(in srgb, var(--default-color), transparent 20%);
  margin-bottom: 10px;
}

.resume .resume-item h5 {
  font-size: 16px;
  padding: 5px 15px;
  display: inline-block;
  font-weight: 600;
  margin-bottom: 10px;
}

.resume .resume-item ul {
  padding-left: 20px;
}

.resume .resume-item ul li {
  padding-bottom: 10px;
}

.resume .resume-item:last-child {
  padding-bottom: 0;
}

.resume .resume-item::before {
  content: "";
  position: absolute;
  width: 16px;
  height: 16px;
  border-radius: 50px;
  left: -9px;
  top: -15px;
  background: transparent;
  border: 2px solid var(--accent-color);
}


/*--------------------------------------------------------------
# Services Section
--------------------------------------------------------------*/
.services .service-item {
  position: relative;
}

.services .service-item .icon {
  background: var(--accent-color);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 54px;
  height: 54px;
  border-radius: 50%;
  transition: 0.5s;
  border: 1px solid var(--accent-color);
  margin-right: 20px;
}

.services .service-item .icon i {
  color: var(--contrast-color);
  font-size: 24px;
  line-height: 0;
}

.services .service-item:hover .icon {
  background: var(--surface-color);
}

.services .service-item:hover .icon i {
  color: var(--accent-color);
}
/* ... */

